k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: mern-namespace
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: skkumar97260/sk-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "150m"        # Requesting 150 milli-CPU
              memory: "1024Mi"   # Requesting 1024 MiB (1 GB) of memory
            limits:
              cpu: "250m"        # Limiting CPU usage to 250 milli-CPU
              memory: "1024Mi"   # Limiting memory usage to 1024 MiB (1 GB)
          livenessProbe:
            httpGet:
              path: /  # Adjust if your app's health check path is different
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /  # Adjust if your app's readiness check path is different
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
